--- a/DT/template/login.html
+++ b/DT/template/login.html
@@ -36,7 +36,7 @@
 						Log in
 					</span>
 					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="uname" placeholder="Username" required>
+						<input class="input100" type="text" name="uname" placeholder="Username" value="{{cookie1}}" required>
 						<span class="focus-input100" data-placeholder="&#xf207;"></span>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
@@ -49,7 +49,12 @@
                                     <p>{{ data }}</p><br>
                                 {% endfor %}
                     </span>
-
+					<div class="form-group">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" name="remember" class="custom-control-input" tabindex="3" id="remember-me">
+                      <label class="custom-control-label" for="remember-me">Remember Me</label>
+                    </div>
+                  </div>
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn" type="submit">
