sign in with google

--- a/DT/template/header.html
+++ b/DT/template/header.html
@@ -173,7 +173,7 @@
 								<img src="{% static '/image/doc2.jpg' %}" class="img-circle user-img-circle" alt="User Image" />
 							</div>
 							<div class="pull-left info">
-								<p> Arpan </p>
+								<p> {{request.patient.patient_name}}</p>
 								<small>Admin</small>
 							</div>
 						</div>
