--- a/DT/template/area_insert.html
+++ b/DT/template/area_insert.html
@@ -1,8 +1,7 @@
 {% extends 'header.html' %}
-<!DOCTYPE html>
 <html lang="en">
 {% block content %}
-    {% load staticfiles %}
+    {% load static %}
 
 			<!-- start page content -->
             <div class="page-content-wrapper">
