--- a/DT/template/header.html
+++ b/DT/template/header.html
@@ -11,6 +11,10 @@
     <meta name="description" content="Responsive Admin Template" />
     <meta name="author" content="Sunray" />
     <title>index</title>
+	 <link rel="stylesheet" href="{% static 'assets/css/app.min.css' %}">
+  <!-- Template CSS -->
+  <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/components.css' %}">
     <!-- google font -->
     <link href="https:/fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" type="text/css" />
 	<!-- icons -->
