--- a/DT/template/all_contact_us.html
+++ b/DT/template/all_contact_us.html
@@ -36,7 +36,7 @@
 					                                    </div>
 					                                </div>
 					                                <div class="card-body ">
-					                                  < class="table-scrollable">
+					                                  <div class="table-scrollable">
                                                       <body>
 					                                    <table class="table table-hover table-checkable order-column full-width" id="example4">
 					                                         <thead>
