--- a/DT/template/header.html
+++ b/DT/template/header.html
@@ -132,7 +132,7 @@
 					</a>
 					<ul class="dropdown-menu dropdown-menu-default">
 						<li>
-							<a href="/admin_edit/1">
+							<a href="/admin_edit/">
 								<i class="fa fa-user"></i> Profile </a>
 						</li>
 
@@ -177,7 +177,7 @@
 								<img src="{% static '/image/doc2.jpg' %}" class="img-circle user-img-circle" alt="User Image" />
 							</div>
 							<div class="pull-left info">
-								<p> {{request.patient.patient_name}}</p>
+								<p></p>
 								<small>Admin</small>
 							</div>
 						</div>
