--- a/DT/template/header.html
+++ b/DT/template/header.html
@@ -52,7 +52,9 @@
 		<div class="page-logo">
 			<a href="/home/">
 				{#                    <img alt="" src="{% statics 'assets/img/logo.png' %}">#}
-				<span class="logo-default" >Knock-Doc</span> </a>
+				<span class="logo-default" >Knock-Doc</span><br> </a>
+
+
 		</div>
 		<!-- logo end -->
 		<ul class="nav navbar-nav navbar-left in">
@@ -181,6 +183,7 @@
 							<div class="pull-left info">
 								<p></p>
 								<small>Admin</small>
+
 							</div>
 						</div>
 					</li>
